--- a/index.html
+++ b/index.html
@@ -100,6 +100,27 @@
                     <input type="submit" value="отправить">
                 </form>
             </div>
+            <div class="contacts">
+                <h2>Контакты</h2>
+                <p>ПО ВСЕМ ВОПРОСАМ ОБРАЩАЙТЕСЬ К НАШЕМУ ОРГАНИЗАТОРУ</p>
+                <p>АЛЕКСАНДРА</p>
+                <p>+7(982)472-10-05</p>
+                <div class="socials">
+                    <a href="https://t.me/Sashulencia" target="_blank">
+                        <i class="fa fa-telegram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://vk.com/sanya_gorbacheva" target="_blank">
+                        <i class="fa fa-vk" aria-hidden="true"></i>
+                    </a>
+                    <a href="mailto:sasha.gorbachewa@yandex.ru&body=Hello!?subject=Question" target="_blank">
+                        <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="waitfor">
+                <h2>Ждем Вас через...</h2>
+                <div class="timer">timer</div>
+            </div>
         </div>
     </div>
     <footer class="footer">
