--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <div class="header__menu">
-                <ul>
+                <ul class="header__menu">
                     <li>О нас</li>
                     <li>Место проведения</li>
                     <li>Расписание</li>
@@ -24,8 +24,8 @@
         </div>
     </header>
     <div class="logo">
-        <div class="container">
-            <div class="logo">
+        <div class="logo-main">
+            <div class="container">
                 <h1>МАКСИМ</h1>
                 <h1>И</h1>
                 <h1>АЛЕКСАНДРА</h1>
@@ -39,12 +39,16 @@
                 <h2>Июль 2024</h2>
                 <h2>Место для календар</h2>
             </div>
-            <div class="place">
+        </div>
+        <div class="place">
+            <div class="container">
                 <h2>Place</h2>
                 <p>Place were we eat</p>
                 <h3>MAP</h3>
             </div>
-            <div class="timing">
+        </div>
+        <div class="timing">
+            <div class="container">
                 <h3>Timing</h3>
                 <div class="timing_flex1">
                     <h4>16:00</h4>
@@ -71,7 +75,9 @@
                     </div>
                 </div>
             </div>
-            <div class="details">
+        </div>
+        <div class="details">
+            <div class="container">
                 <h2>Детали</h2>
                 <p>МЫ ОЧЕНЬ ЖДЕМ И С УДОВОЛЬСТВИЕМ ГОТОВИМСЯ К НАШЕМУ НЕЗАБЫВАЕМОМУ ДНЮ!</p>
                 <p>ПОДДЕРЖИТЕ НАС ВАШИМИ УЛЫБКАМИ И ОБЪЯТИЯМИ, А ТАКЖЕ КРАСИВЫМИ НАРЯДАМИ В ПАЛИТРЕ ТОРЖЕСТВА</p>
@@ -88,7 +94,9 @@
                 </div>
                 <p>ПРИЯТНЫМ КОМПЛИМЕНТОМ ДЛЯ НАС БУДЕТ, ЕСЛИ ВМЕСТО ЦВЕТОВ ВЫ РЕШИТЕ ПОДАРИТЬ НАМ БУТЫЛОЧКУ ВИНА</p>
             </div>
-            <div class="forms">
+        </div>
+        <div class="forms">
+            <div class="container">
                 <h2>Анкета</h2>
                 <p>ОТВЕТЬТЕ, ПОЖАЛУЙСТА, НА НЕСКОЛЬКО ВОПРОСОВ, КОТОРЫЕ МЫ ДЛЯ ВАС ПОДГОТОВИЛИ</p>
                 <p><i class="fa fa-angle-down" aria-hidden="true"></i></p>
@@ -100,7 +108,9 @@
                     <input type="submit" value="отправить">
                 </form>
             </div>
-            <div class="contacts">
+        </div>
+        <div class="contacts">
+            <div class="container">
                 <h2>Контакты</h2>
                 <p>ПО ВСЕМ ВОПРОСАМ ОБРАЩАЙТЕСЬ К НАШЕМУ ОРГАНИЗАТОРУ</p>
                 <p>АЛЕКСАНДРА</p>
@@ -112,16 +122,17 @@
                     <a href="https://vk.com/sanya_gorbacheva" target="_blank">
                         <i class="fa fa-vk" aria-hidden="true"></i>
                     </a>
-                    <a href="mailto:sasha.gorbachewa@yandex.ru&body=Hello!?subject=Question" target="_blank">
+                    <a href="mailto:ya@mkochnev.ru&body=hello?subject=question" target="_blank">
                         <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
-            <div class="waitfor">
-                <h2>Ждем Вас через...</h2>
-                <div class="timer">timer</div>
-            </div>
         </div>
+        <div class="waitfor">
+            <h2>Ждем Вас через...</h2>
+            <div class="timer">timer</div>
+        </div>
+    </div>
     </div>
     <footer class="footer">
 
