--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="container">
             <div class="header__menu">
                 <ul class="header__menu">
-                    <li>О нас</li>
-                    <li>Место проведения</li>
-                    <li>Расписание</li>
-                    <li>Опрос</li>
-                    <li>Контакты</li>
+                    <li class="header_txt">О нас</li>
+                    <li class="header_txt">Место проведения</li>
+                    <li class="header_txt">Расписание</li>
+                    <li class="header_txt">Опрос</li>
+                    <li class="header_txt">Контакты</li>
                 </ul>
             </div>
         </div>
@@ -26,33 +26,94 @@
     <div class="logo">
         <div class="logo-main">
             <div class="container">
-                <h1>МАКСИМ</h1>
-                <h1>И</h1>
-                <h1>АЛЕКСАНДРА</h1>
-                <h2>Мы женимся!</h2>
-                <h2>11.07.2024</h2>
+                <h1 class="name_txt">МАКСИМ</h1>
+                <h1 class="lastochka-font">И</h1>
+                <h1 class="name_txt">АЛЕКСАНДРА</h1>
+                <h2 class="lastochka-font">Мы женимся!</h2>
+                <h2 class="name_txt">11 | 07 | 2024</h2>
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
-                <h2>Дорогие гости!</h2>
-                <p>В НАШЕЙ ЖИЗНИ ПРЕДСТОЯТ СЧАСТЛИВЫЕ ПЕРЕМЕНЫ! МЫ ХОТИМ, ЧТОБЫ В ЭТОТ ДЕНЬ РЯДОМ С НАМИ БЫЛИ САМЫЕ
+                <h2 class="lastochka-font">Дорогие гости!</h2>
+                <p class="under_txt">В НАШЕЙ ЖИЗНИ ПРЕДСТОЯТ СЧАСТЛИВЫЕ ПЕРЕМЕНЫ! МЫ ХОТИМ, ЧТОБЫ В ЭТОТ ДЕНЬ РЯДОМ С
+                    НАМИ БЫЛИ САМЫЕ
                     БЛИЗКИЕ И ДОРОГИЕ ДЛЯ НАС ЛЮДИ. БУДЕМ РАДЫ РАЗДЕЛИТЬ С ВАМИ ЧУДЕСНЫЙ ПРАЗДНИК В ДЕНЬ НАШЕЙ СВАДЬБЫ
                 </p>
-                <h2>Июль 2024</h2>
-                <h2>Место для календар</h2>
+                <h2 class="lastochka-font">Июль 2024</h2>
+                <h2 class="calendar" id="">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th>пн</th>
+                                <th>вт</th>
+                                <th>ср</th>
+                                <th>чт</th>
+                                <th>пт</th>
+                                <th>сб</th>
+                                <th>вс</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>2</td>
+                                <td>3</td>
+                                <td>4</td>
+                                <td>5</td>
+                                <td>6</td>
+                                <td>7</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>9</td>
+                                <td>10</td>
+                                <td>11</td>
+                                <td>12</td>
+                                <td>13</td>
+                                <td>14</td>
+                            </tr>
+                            <tr>
+                                <td>15</td>
+                                <td>16</td>
+                                <td>17</td>
+                                <td>18</td>
+                                <td>19</td>
+                                <td>20</td>
+                                <td>21</td>
+                            </tr>
+                            <tr>
+                                <td>22</td>
+                                <td>23</td>
+                                <td>24</td>
+                                <td>25</td>
+                                <td>26</td>
+                                <td>27</td>
+                                <td>28</td>
+                            </tr>
+                            <tr>
+                                <td>29</td>
+                                <td>30</td>
+                                <td>31</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </h2>
             </div>
         </div>
         <div class="place">
             <div class="container">
-                <h2>Place</h2>
+                <h2 class="lastochka-font">Place</h2>
                 <p>Place were we eat</p>
                 <h3>MAP</h3>
             </div>
         </div>
         <div class="timing">
             <div class="container">
-                <h3>Timing</h3>
+                <h2 class="lastochka-font">Timing</h2>
                 <div class="timing_flex1">
                     <h4>16:00</h4>
-                    <img src="" alt="img">
+                    <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/the-toast.png"
+                        alt="the-toast" />
                     <div class="timing_flex_txt">
                         <h6>WELCOME</h6>
                         <p>СОБИРАЯСЬ НА ТОРЖЕСТВО ВОЗЬМИТЕ С СОБОЙ СВОИ УЛЫБКИ И ХОРОШЕЕ НАСТРОЕНИЕ</p>
@@ -60,7 +121,7 @@
                 </div>
                 <div class="timing_flex2">
                     <h4>16:30</h4>
-                    <img src="" alt="img">
+                    <img src="/images/rings_3405946.png">
                     <div class="timing_flex_txt">
                         <h6>ВЫЕЗДНАЯ РЕГИСТРАЦИЯ</h6>
                         <p>ПРИГОТОВЬТЕ ПЛАТОЧКИ ДЛЯ ТРОГАТЕЛЬНОГО МОМЕНТА</p>
@@ -68,7 +129,8 @@
                 </div>
                 <div class="timing_flex3">
                     <h4>17:00</h4>
-                    <img src="" alt="img">
+                    <img width="64" height="64" src="https://img.icons8.com/pastel-glyph/64/meal--v2.png"
+                        alt="meal--v2" />
                     <div class="timing_flex_txt">
                         <h6>ПРАЗДНИЧНЫЙ БАНКЕТ</h6>
                         <p>ВРЕМЯ ТАНЦЕВ, ВКУСНОЙ ЕДЫ, ТЕПЛЫХ ПОЖЕЛАНИЙ И РАЗВЛЕЧЕНИЙ</p>
@@ -78,7 +140,7 @@
         </div>
         <div class="details">
             <div class="container">
-                <h2>Детали</h2>
+                <h2 class="lastochka-font">Детали</h2>
                 <p>МЫ ОЧЕНЬ ЖДЕМ И С УДОВОЛЬСТВИЕМ ГОТОВИМСЯ К НАШЕМУ НЕЗАБЫВАЕМОМУ ДНЮ!</p>
                 <p>ПОДДЕРЖИТЕ НАС ВАШИМИ УЛЫБКАМИ И ОБЪЯТИЯМИ, А ТАКЖЕ КРАСИВЫМИ НАРЯДАМИ В ПАЛИТРЕ ТОРЖЕСТВА</p>
                 <div class="img_flex">
@@ -87,10 +149,10 @@
                     <div class="circle3"></div>
                 </div>
                 <div class="womens">
-                    <h3>Женщины</h3>
+                    <h3 class="lastochka-font">ДЕВУШКИ</h3>
                 </div>
                 <div class="mans">
-                    <h3>Мужчины</h3>
+                    <h3 class="lastochka-font">МУЖЧИНЫ</h3>
                 </div>
                 <p>ПРИЯТНЫМ КОМПЛИМЕНТОМ ДЛЯ НАС БУДЕТ, ЕСЛИ ВМЕСТО ЦВЕТОВ ВЫ РЕШИТЕ ПОДАРИТЬ НАМ БУТЫЛОЧКУ ВИНА</p>
             </div>
@@ -129,10 +191,9 @@
             </div>
         </div>
         <div class="waitfor">
-            <h2>Ждем Вас через...</h2>
+            <h2 class="lastochka-font">Ждем Вас через...</h2>
             <div class="timer">timer</div>
         </div>
-    </div>
     </div>
     <footer class="footer">
 
