--- a/index.html
+++ b/index.html
@@ -14,31 +14,36 @@
         <div class="container">
             <div class="header__menu">
                 <ul class="header__menu">
-                    <li class="header_txt">О нас</li>
-                    <li class="header_txt">Место проведения</li>
-                    <li class="header_txt">Расписание</li>
-                    <li class="header_txt">Опрос</li>
-                    <li class="header_txt">Контакты</li>
+                    <li class="header_txt"><a href="#block1">О нас</a></li>
+                    <li class="header_txt"><a href="#block2">Место проведения</a></li>
+                    <li class="header_txt"><a href="#block3">Расписание</a></li>
+                    <li class="header_txt"><a href="#block4">Опрос</a></li>
+                    <li class="header_txt"><a href="#block5">Контакты</a></li>
                 </ul>
             </div>
         </div>
     </header>
-    <div class="logo">
+    <div class="logo" id="block1">
         <div class="logo-main">
             <div class="container">
                 <h1 class="name_txt">МАКСИМ</h1>
                 <h1 class="lastochka-font">И</h1>
                 <h1 class="name_txt">АЛЕКСАНДРА</h1>
                 <h2 class="lastochka-font">Мы женимся!</h2>
-                <h2 class="name_txt">11 | 07 | 2024</h2>
-                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <h2 class="name_txt">10 | 07 | 2024</h2>
+                <div class="arrow-7">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <h2 class="lastochka-font">Дорогие гости!</h2>
                 <p class="under_txt">В НАШЕЙ ЖИЗНИ ПРЕДСТОЯТ СЧАСТЛИВЫЕ ПЕРЕМЕНЫ! МЫ ХОТИМ, ЧТОБЫ В ЭТОТ ДЕНЬ РЯДОМ С
                     НАМИ БЫЛИ САМЫЕ
                     БЛИЗКИЕ И ДОРОГИЕ ДЛЯ НАС ЛЮДИ. БУДЕМ РАДЫ РАЗДЕЛИТЬ С ВАМИ ЧУДЕСНЫЙ ПРАЗДНИК В ДЕНЬ НАШЕЙ СВАДЬБЫ
                 </p>
                 <h2 class="lastochka-font">Июль 2024</h2>
-                <h2 class="calendar" id="">
+                <img src="/images/animated_rings.png" alt="Animated_ring" class="circle_spin-ring">
+                <h2 class="calendar">
                     <table>
                         <tbody>
                             <tr>
@@ -62,7 +67,7 @@
                             <tr>
                                 <td>8</td>
                                 <td>9</td>
-                                <td>10</td>
+                                <td class="data">10</td>
                                 <td>11</td>
                                 <td>12</td>
                                 <td>13</td>
@@ -100,40 +105,41 @@
                 </h2>
             </div>
         </div>
-        <div class="place">
+        <div class="place" id="block2">
             <div class="container">
                 <h2 class="lastochka-font">Place</h2>
                 <p>Place were we eat</p>
                 <h3>MAP</h3>
             </div>
         </div>
-        <div class="timing">
+        <div class="timing" id="block3">
             <div class="container">
-                <h2 class="lastochka-font">Timing</h2>
+                <h2 class="lastochka-font timing_header">Timing</h2>
                 <div class="timing_flex1">
-                    <h4>16:00</h4>
+                    <h4 class="lastochka-font">16:00</h4>
                     <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/the-toast.png"
-                        alt="the-toast" />
+                        class="timing_img" alt="the-toast" />
                     <div class="timing_flex_txt">
-                        <h6>WELCOME</h6>
-                        <p>СОБИРАЯСЬ НА ТОРЖЕСТВО ВОЗЬМИТЕ С СОБОЙ СВОИ УЛЫБКИ И ХОРОШЕЕ НАСТРОЕНИЕ</p>
+                        <h6 class="timing_upper-txt">WELCOME</h6>
+                        <p class="timing_bottom-txt">СОБИРАЯСЬ НА ТОРЖЕСТВО ВОЗЬМИТЕ С СОБОЙ СВОИ УЛЫБКИ И ХОРОШЕЕ
+                            НАСТРОЕНИЕ</p>
                     </div>
                 </div>
                 <div class="timing_flex2">
-                    <h4>16:30</h4>
-                    <img src="/images/rings_3405946.png">
+                    <h4 class="lastochka-font">16:30</h4>
+                    <img src="/images/rings_3405946.png" class="timing_img">
                     <div class="timing_flex_txt">
-                        <h6>ВЫЕЗДНАЯ РЕГИСТРАЦИЯ</h6>
-                        <p>ПРИГОТОВЬТЕ ПЛАТОЧКИ ДЛЯ ТРОГАТЕЛЬНОГО МОМЕНТА</p>
+                        <h6 class="timing_upper-txt">ВЫЕЗДНАЯ РЕГИСТРАЦИЯ</h6>
+                        <p class="timing_bottom-txt">ПРИГОТОВЬТЕ ПЛАТОЧКИ ДЛЯ ТРОГАТЕЛЬНОГО МОМЕНТА</p>
                     </div>
                 </div>
                 <div class="timing_flex3">
-                    <h4>17:00</h4>
+                    <h4 class="lastochka-font">17:00</h4>
                     <img width="64" height="64" src="https://img.icons8.com/pastel-glyph/64/meal--v2.png"
                         alt="meal--v2" />
                     <div class="timing_flex_txt">
-                        <h6>ПРАЗДНИЧНЫЙ БАНКЕТ</h6>
-                        <p>ВРЕМЯ ТАНЦЕВ, ВКУСНОЙ ЕДЫ, ТЕПЛЫХ ПОЖЕЛАНИЙ И РАЗВЛЕЧЕНИЙ</p>
+                        <h6 class="timing_upper-txt">ПРАЗДНИЧНЫЙ БАНКЕТ</h6>
+                        <p class="timing_bottom-txt">ВРЕМЯ ТАНЦЕВ, ВКУСНОЙ ЕДЫ, ТЕПЛЫХ ПОЖЕЛАНИЙ И РАЗВЛЕЧЕНИЙ</p>
                     </div>
                 </div>
             </div>
@@ -157,23 +163,34 @@
                 <p>ПРИЯТНЫМ КОМПЛИМЕНТОМ ДЛЯ НАС БУДЕТ, ЕСЛИ ВМЕСТО ЦВЕТОВ ВЫ РЕШИТЕ ПОДАРИТЬ НАМ БУТЫЛОЧКУ ВИНА</p>
             </div>
         </div>
-        <div class="forms">
+        <div class="forms" id="block4">
             <div class="container">
-                <h2>Анкета</h2>
+                <h2 class="lastochka-font">Анкета</h2>
                 <p>ОТВЕТЬТЕ, ПОЖАЛУЙСТА, НА НЕСКОЛЬКО ВОПРОСОВ, КОТОРЫЕ МЫ ДЛЯ ВАС ПОДГОТОВИЛИ</p>
-                <p><i class="fa fa-angle-down" aria-hidden="true"></i></p>
-                <p><i class="fa fa-angle-down" aria-hidden="true"></i></p>
+                <div class="arrow-7">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <form method="POST" id="feedback-form">
-                    <input type="text" name="nameFF" required placeholder="Имя" x-autocompletetype="name">
-                    <input type="email" name="contactFF" required placeholder="E-mail" x-autocompletetype="email">
-                    <textarea name="messageFF" required rows="5"></textarea>
-                    <input type="submit" value="отправить">
+                    <p>
+                        <input type="text" name="nameFF" required placeholder="Имя" x-autocompletetype="name">
+                    </p>
+                    <p>
+                        <input type="email" name="contactFF" required placeholder="E-mail" x-autocompletetype="email">
+                    </p>
+                    <p>
+                        <textarea name="messageFF" required rows="5"></textarea>
+                    </p>
+                    <p>
+                        <input type="submit" value="отправить">
+                    </p>
                 </form>
             </div>
         </div>
-        <div class="contacts">
+        <div class="contacts" id="block5">
             <div class="container">
-                <h2>Контакты</h2>
+                <h2 class="lastochka-font">Контакты</h2>
                 <p>ПО ВСЕМ ВОПРОСАМ ОБРАЩАЙТЕСЬ К НАШЕМУ ОРГАНИЗАТОРУ</p>
                 <p>АЛЕКСАНДРА</p>
                 <p>+7(982)472-10-05</p>
@@ -191,8 +208,17 @@
             </div>
         </div>
         <div class="waitfor">
-            <h2 class="lastochka-font">Ждем Вас через...</h2>
-            <div class="timer">timer</div>
+            <div class="container">
+                <h2 class="lastochka-font bottom-txt">Ждем Вас через...</h2>
+                <div class="timer">
+                    <div class="timer__items">
+                        <div class="timer__item timer__days">00</div>
+                        <div class="timer__item timer__hours">00</div>
+                        <div class="timer__item timer__minutes">00</div>
+                        <div class="timer__item timer__seconds">00</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="footer">
