Added some things

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                 </div>
                 <div class="timing_flex3">
                     <h4 class="lastochka-font">17:00</h4>
-                    <img width="64" height="64" src="https://img.icons8.com/pastel-glyph/64/meal--v2.png"
-                        alt="meal--v2" />
+                    <img width="64" height="64" src="/images/romantic-dinner.png" alt="meal--v2" />
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">ПРАЗДНИЧНЫЙ БАНКЕТ</h6>
                         <p class="timing_bottom-txt">ВРЕМЯ ТАНЦЕВ, ВКУСНОЙ ЕДЫ, ТЕПЛЫХ ПОЖЕЛАНИЙ И РАЗВЛЕЧЕНИЙ</p>
