--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
             <div class="header__menu">
                 <ul class="header__menu">
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </div>
-    </header>
+    </header> -->
     <div class="logo" id="block1">
         <div class="logo-main">
             <div class="container">
@@ -41,68 +41,11 @@
                     НАМИ БЫЛИ САМЫЕ
                     БЛИЗКИЕ И ДОРОГИЕ ДЛЯ НАС ЛЮДИ. БУДЕМ РАДЫ РАЗДЕЛИТЬ С ВАМИ ЧУДЕСНЫЙ ПРАЗДНИК В ДЕНЬ НАШЕЙ СВАДЬБЫ
                 </p>
-                <h2 class="lastochka-font">Июль 2024</h2>
-                <img src="/images/animated_rings.png" alt="Animated_ring" class="circle_spin-ring">
-                <h2 class="calendar">
-                    <table>
-                        <tbody>
-                            <tr>
-                                <th>пн</th>
-                                <th>вт</th>
-                                <th>ср</th>
-                                <th>чт</th>
-                                <th>пт</th>
-                                <th>сб</th>
-                                <th>вс</th>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>2</td>
-                                <td>3</td>
-                                <td>4</td>
-                                <td>5</td>
-                                <td>6</td>
-                                <td>7</td>
-                            </tr>
-                            <tr>
-                                <td>8</td>
-                                <td>9</td>
-                                <td class="data">10</td>
-                                <td>11</td>
-                                <td>12</td>
-                                <td>13</td>
-                                <td>14</td>
-                            </tr>
-                            <tr>
-                                <td>15</td>
-                                <td>16</td>
-                                <td>17</td>
-                                <td>18</td>
-                                <td>19</td>
-                                <td>20</td>
-                                <td>21</td>
-                            </tr>
-                            <tr>
-                                <td>22</td>
-                                <td>23</td>
-                                <td>24</td>
-                                <td>25</td>
-                                <td>26</td>
-                                <td>27</td>
-                                <td>28</td>
-                            </tr>
-                            <tr>
-                                <td>29</td>
-                                <td>30</td>
-                                <td>31</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </h2>
+                <h2 class="lastochka-font logo-date">Июль 2024</h2>
+                <div class="calendar">
+                    <img src="/images/ring.svg" alt="Calendar Heart" class="img1_calendar">
+                    <img src="/images/calendar.png" alt="Heart" class="img2_calendar">
+                </div>
             </div>
         </div>
         <div class="place" id="block2">
@@ -117,8 +60,8 @@
                 <h2 class="lastochka-font timing_header">Timing</h2>
                 <div class="timing_flex1">
                     <h4 class="lastochka-font">16:00</h4>
-                    <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/the-toast.png"
-                        class="timing_img" alt="the-toast" />
+                    <!-- <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/the-toast.png" class="timing_img" alt="the-toast" /> -->
+                    <img src="/images/dance.png" alt="Dance" width="70" height="70">
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">WELCOME</h6>
                         <p class="timing_bottom-txt">СОБИРАЯСЬ НА ТОРЖЕСТВО ВОЗЬМИТЕ С СОБОЙ СВОИ УЛЫБКИ И ХОРОШЕЕ
@@ -192,7 +135,7 @@
                 <h2 class="lastochka-font">Контакты</h2>
                 <p>ПО ВСЕМ ВОПРОСАМ ОБРАЩАЙТЕСЬ К НАШЕМУ ОРГАНИЗАТОРУ</p>
                 <p>АЛЕКСАНДРА</p>
-                <p>+7(982)472-10-05</p>
+                <p>+7(908)999-89-99</p>
                 <div class="socials">
                     <a href="https://t.me/Sashulencia" target="_blank">
                         <i class="fa fa-telegram" aria-hidden="true"></i>
