--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </p>
                 <h2 class="lastochka-font logo-date">Июль 2024</h2>
                 <div class="calendar">
-                    <img src="/images/ring.svg" alt="Calendar Heart" class="img1_calendar">
-                    <img src="/images/calendar.png" alt="Heart" class="img2_calendar">
+                    <img src="./images/ring.svg" alt="Calendar Heart" class="img1_calendar">
+                    <img src="./images/calendar.png" alt="Heart" class="img2_calendar">
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
                 <div class="timing_flex1">
                     <h4 class="lastochka-font">16:00</h4>
                     <!-- <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/the-toast.png" class="timing_img" alt="the-toast" /> -->
-                    <img src="/images/dance.png" alt="Dance" width="70" height="70">
+                    <img src="./images/dance.png" alt="Dance" width="70" height="70">
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">WELCOME</h6>
                         <p class="timing_bottom-txt">СОБИРАЯСЬ НА ТОРЖЕСТВО ВОЗЬМИТЕ С СОБОЙ СВОИ УЛЫБКИ И ХОРОШЕЕ
@@ -70,7 +70,7 @@
                 </div>
                 <div class="timing_flex2">
                     <h4 class="lastochka-font">16:30</h4>
-                    <img src="/images/rings_3405946.png" class="timing_img">
+                    <img src="./images/rings_3405946.png" class="timing_img">
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">ВЫЕЗДНАЯ РЕГИСТРАЦИЯ</h6>
                         <p class="timing_bottom-txt">ПРИГОТОВЬТЕ ПЛАТОЧКИ ДЛЯ ТРОГАТЕЛЬНОГО МОМЕНТА</p>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="timing_flex3">
                     <h4 class="lastochka-font">17:00</h4>
-                    <img width="64" height="64" src="/images/romantic-dinner.png" alt="meal--v2" />
+                    <img width="64" height="64" src="./images/romantic-dinner.png" alt="meal--v2" />
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">ПРАЗДНИЧНЫЙ БАНКЕТ</h6>
                         <p class="timing_bottom-txt">ВРЕМЯ ТАНЦЕВ, ВКУСНОЙ ЕДЫ, ТЕПЛЫХ ПОЖЕЛАНИЙ И РАЗВЛЕЧЕНИЙ</p>
