Ver without mobile adaptation

--- a/index.html
+++ b/index.html
@@ -46,23 +46,90 @@
                 <h2 class="lastochka-font logo-date">Июль 2024</h2>
                 <div class="calendar">
                     <img src="/images/ring.svg" alt="Calendar Heart" class="img1_calendar">
-                    <img src="/images/calendar.png" alt="Heart" class="img2_calendar">
+                    <!-- <img src="/images/calendar.png" alt="Heart" class="img2_calendar"> -->
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th>пн</th>
+                                <th>вт</th>
+                                <th>ср</th>
+                                <th>чт</th>
+                                <th>пт</th>
+                                <th>сб</th>
+                                <th>вс</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>2</td>
+                                <td>3</td>
+                                <td>4</td>
+                                <td>5</td>
+                                <td>6</td>
+                                <td>7</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>9</td>
+                                <td>10</td>
+                                <td>11</td>
+                                <td>12</td>
+                                <td>13</td>
+                                <td>14</td>
+                            </tr>
+                            <tr>
+                                <td>15</td>
+                                <td>16</td>
+                                <td>17</td>
+                                <td>18</td>
+                                <td>19</td>
+                                <td>20</td>
+                                <td>21</td>
+                            </tr>
+                            <tr>
+                                <td>22</td>
+                                <td>23</td>
+                                <td>24</td>
+                                <td>25</td>
+                                <td>26</td>
+                                <td>27</td>
+                                <td>28</td>
+                            </tr>
+                            <tr>
+                                <td>29</td>
+                                <td>30</td>
+                                <td>31</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
         <div class="place" id="block2">
             <div class="container">
                 <h2 class="lastochka-font">Place</h2>
-                <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/kusto/122436416809/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Кусто</a><a href="https://yandex.ru/maps/47/nizhny-novgorod/category/restaurant/184106394/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Ресторан в Нижнем Новгороде</a><iframe src="https://yandex.ru/map-widget/v1/?indoorLevel=1&ll=44.007697%2C56.322958&mode=poi&poi%5Bpoint%5D=44.005963%2C56.324265&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D122436416809&z=16.8" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+                <p class="place-txt">Ресторан "Кусто", Нижний Новгород, улица Пискунова, 16</p>
+                <div style="position:relative;overflow:hidden;"><a
+                        href="https://yandex.ru/maps/org/kusto/122436416809/?utm_medium=mapframe&utm_source=maps"
+                        style="color:#eee;font-size:12px;position:absolute;top:0px;">Кусто</a><a
+                        href="https://yandex.ru/maps/47/nizhny-novgorod/category/restaurant/184106394/?utm_medium=mapframe&utm_source=maps"
+                        style="color:#eee;font-size:12px;position:absolute;top:14px;">Ресторан в Нижнем
+                        Новгороде</a><iframe
+                        src="https://yandex.ru/map-widget/v1/?indoorLevel=1&ll=44.007697%2C56.322958&mode=poi&poi%5Bpoint%5D=44.005963%2C56.324265&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D122436416809&z=16.8"
+                        width="560" height="400" frameborder="1" allowfullscreen="true"
+                        style="position:relative;"></iframe></div>
             </div>
         </div>
         <div class="timing" id="block3">
             <div class="container">
                 <h2 class="lastochka-font timing_header">Timing</h2>
                 <div class="timing_flex1">
-                    <h4 class="lastochka-font">16:00</h4>
+                    <h4 class="lastochka-font timing-txt">16:00</h4>
                     <!-- <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/the-toast.png" class="timing_img" alt="the-toast" /> -->
-                    <img src="images/dance.png" alt="Dance" width="70" height="70">
+                    <img src="images/dance.png" alt="Dance" width="70" height="70" class="timing-txt">
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">WELCOME</h6>
                         <p class="timing_bottom-txt">СОБИРАЯСЬ НА ТОРЖЕСТВО ВОЗЬМИТЕ С СОБОЙ СВОИ УЛЫБКИ И ХОРОШЕЕ
@@ -70,7 +137,7 @@
                     </div>
                 </div>
                 <div class="timing_flex2">
-                    <h4 class="lastochka-font">16:30</h4>
+                    <h4 class="lastochka-font timing-txt">16:30</h4>
                     <img src="/images/rings_3405946.png" class="timing_img">
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">ВЫЕЗДНАЯ РЕГИСТРАЦИЯ</h6>
@@ -78,8 +145,8 @@
                     </div>
                 </div>
                 <div class="timing_flex3">
-                    <h4 class="lastochka-font">17:00</h4>
-                    <img width="64" height="64" src="images/romantic-dinner.png" alt="meal--v2" />
+                    <h4 class="lastochka-font timing-txt">17:00</h4>
+                    <img class="timing-txt" width="64" height="64" src="images/romantic-dinner.png" alt="meal--v2" />
                     <div class="timing_flex_txt">
                         <h6 class="timing_upper-txt">ПРАЗДНИЧНЫЙ БАНКЕТ</h6>
                         <p class="timing_bottom-txt">ВРЕМЯ ТАНЦЕВ, ВКУСНОЙ ЕДЫ, ТЕПЛЫХ ПОЖЕЛАНИЙ И РАЗВЛЕЧЕНИЙ</p>
@@ -90,36 +157,42 @@
         <div class="details">
             <div class="container">
                 <h2 class="lastochka-font">Детали</h2>
-                <p>МЫ ОЧЕНЬ ЖДЕМ И С УДОВОЛЬСТВИЕМ ГОТОВИМСЯ К НАШЕМУ НЕЗАБЫВАЕМОМУ ДНЮ!</p>
+                <p>МЫ ОЧЕНЬ ЖДЕМ И С УДОВОЛЬСТВИЕМ ГОТОВИМСЯ К НАШЕМУ НЕЗАБЫВАЕМОМУ ДНЮ!</p> <br>
+                <p>ПРИЯТНЫМ КОМПЛИМЕНТОМ ДЛЯ НАС БУДЕТ, ЕСЛИ ВМЕСТО ЦВЕТОВ ВЫ РЕШИТЕ ПОДАРИТЬ НАМ БУТЫЛОЧКУ ВИНА</p><br>
                 <p>ПОДДЕРЖИТЕ НАС ВАШИМИ УЛЫБКАМИ И ОБЪЯТИЯМИ, А ТАКЖЕ КРАСИВЫМИ НАРЯДАМИ В ПАЛИТРЕ ТОРЖЕСТВА</p>
-                <div class="img_flex">
-                    <div class="circle1"></div>
-                    <div class="circle2"></div>
-                    <div class="circle3"></div>
-                </div>
                 <div class="womens">
-                    <h3 class="lastochka-font">ДЕВУШКИ</h3>
+                    <h3 class="lastochka-font">Девушки</h3>
+                    <div class="circle-flex">
+
+                        <div class="circle1"></div>
+                        <div class="circle2"></div>
+                        <div class="circle3"></div>
+                    </div>
                     <div class="womens-img">
-                        <img src="/images/dress code/woman/1.jpg" alt="Woman Image 1">
-                        <img src="/images/dress code/woman/2.jpg" alt="Woman Image 2">
-                        <img src="/images/dress code/woman/3.jpg" alt="Woman Image 3">
-                        <img src="/images/dress code/woman/4.jpg" alt="Woman Image 4">
-                        <img src="/images/dress code/woman/5.jpg" alt="Woman Image 5">
-                        <img src="/images/dress code/woman/6.jpg" alt="Woman Image 6">
+                        <img class="people-img" src="/images/dress code/woman/1.jpg" alt="Woman Image 1">
+                        <img class="people-img" src="/images/dress code/woman/2.jpg" alt="Woman Image 2">
+                        <img class="people-img" src="/images/dress code/woman/6.jpg" alt="Woman Image 3">
+                        <img class="people-img" src="/images/dress code/woman/3.jpg" alt="Woman Image 4">
+                        <img class="people-img" src="/images/dress code/woman/4.jpg" alt="Woman Image 5">
+                        <img class="people-img" src="/images/dress code/woman/5.jpg" alt="Woman Image 6">
                     </div>
                 </div>
                 <div class="mans">
-                    <h3 class="lastochka-font">МУЖЧИНЫ</h3>
+                    <h3 class="lastochka-font">Мужчины</h3>
+                    <div class="circle-flex">
+
+                        <div class="circle4"></div>
+                        <div class="circle5"></div>
+                    </div>
                     <div class="mans-img">
-                        <img src="/images/dress code/mans/man_1.png" alt="Man Image 1">
-                        <img src="/images/dress code/mans/man_2.png" alt="Man Image 2">
-                        <img src="/images/dress code/mans/man_3.jpg" alt="Man Image 3">
-                        <img src="/images/dress code/mans/man_4.jpg" alt="Man Image 4">
-                        <img src="/images/dress code/mans/man_5.jpg" alt="Man Image 5">
-                        <img src="/images/dress code/mans/man_6.jpg" alt="Man Image 6">
+                        <img class="people-img" src="/images/dress code/mans/man_1.png" alt="Man Image 1">
+                        <img class="people-img" src="/images/dress code/mans/man_2.png" alt="Man Image 2">
+                        <img class="people-img" src="/images/dress code/mans/man_3.jpg" alt="Man Image 3">
+                        <img class="people-img" src="/images/dress code/mans/man_4.jpg" alt="Man Image 4">
+                        <img class="people-img" src="/images/dress code/mans/man_5.jpg" alt="Man Image 5">
+                        <img class="people-img" src="/images/dress code/mans/man_6.jpg" alt="Man Image 6">
                     </div>
                 </div>
-                <p>ПРИЯТНЫМ КОМПЛИМЕНТОМ ДЛЯ НАС БУДЕТ, ЕСЛИ ВМЕСТО ЦВЕТОВ ВЫ РЕШИТЕ ПОДАРИТЬ НАМ БУТЫЛОЧКУ ВИНА</p>
             </div>
         </div>
         <div class="forms" id="block4">
@@ -145,7 +218,9 @@
                         <input type="submit" value="отправить">
                     </p>
                 </form> -->
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeOP_hI_Kl4Mfd2hOaCYfU83sLGscPTDikUT0OoKw-PxmExmQ/viewform?embedded=true" width="640" height="748" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <iframe
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSf8wKSJW-Ma9zKDESMqaDC1KIS_zGiFaYRa11j_M_hW7KGWQg/viewform?embedded=true"
+                    width="640" height="921" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </div>
         <div class="contacts" id="block5">
