--- a/index.html
+++ b/index.html
@@ -168,29 +168,32 @@
                         <div class="circle2"></div>
                         <div class="circle3"></div>
                     </div>
-                    <div class="womens-img">
-                        <img class="people-img" src="/images/dress code/woman/1.jpg" alt="Woman Image 1">
-                        <img class="people-img" src="/images/dress code/woman/2.jpg" alt="Woman Image 2">
-                        <img class="people-img" src="/images/dress code/woman/6.jpg" alt="Woman Image 3">
-                        <img class="people-img" src="/images/dress code/woman/3.jpg" alt="Woman Image 4">
-                        <img class="people-img" src="/images/dress code/woman/4.jpg" alt="Woman Image 5">
-                        <img class="people-img" src="/images/dress code/woman/5.jpg" alt="Woman Image 6">
+                    <div class="horizontal-scroll">
+                        <ul class="womens-img">
+                            <li><img class="people-img" src="/images/dress code/woman/1.jpg" alt="Woman Image 1"></li>
+                            <li><img class="people-img" src="/images/dress code/woman/2.jpg" alt="Woman Image 2"></li>
+                            <li><img class="people-img" src="/images/dress code/woman/6.jpg" alt="Woman Image 3"></li>
+                            <li><img class="people-img" src="/images/dress code/woman/3.jpg" alt="Woman Image 4"></li>
+                            <li><img class="people-img" src="/images/dress code/woman/4.jpg" alt="Woman Image 5"></li>
+                            <li><img class="people-img" src="/images/dress code/woman/5.jpg" alt="Woman Image 6"></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="mans">
                     <h3 class="lastochka-font">Мужчины</h3>
                     <div class="circle-flex">
-
                         <div class="circle4"></div>
                         <div class="circle5"></div>
                     </div>
-                    <div class="mans-img">
-                        <img class="people-img" src="/images/dress code/mans/man_1.png" alt="Man Image 1">
-                        <img class="people-img" src="/images/dress code/mans/man_2.png" alt="Man Image 2">
-                        <img class="people-img" src="/images/dress code/mans/man_3.jpg" alt="Man Image 3">
-                        <img class="people-img" src="/images/dress code/mans/man_4.jpg" alt="Man Image 4">
-                        <img class="people-img" src="/images/dress code/mans/man_5.jpg" alt="Man Image 5">
-                        <img class="people-img" src="/images/dress code/mans/man_6.jpg" alt="Man Image 6">
+                    <div class="horizontal-scroll">
+                        <ul class="mans-img">
+                            <li><img class="people-img" src="/images/dress code/mans/man_1.png" alt="Man Image 1"></li>
+                            <li><img class="people-img" src="/images/dress code/mans/man_2.png" alt="Man Image 2"></li>
+                            <li><img class="people-img" src="/images/dress code/mans/man_3.jpg" alt="Man Image 3"></li>
+                            <li><img class="people-img" src="/images/dress code/mans/man_4.jpg" alt="Man Image 4"></li>
+                            <li><img class="people-img" src="/images/dress code/mans/man_5.jpg" alt="Man Image 5"></li>
+                            <li><img class="people-img" src="/images/dress code/mans/man_6.jpg" alt="Man Image 6"></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -219,6 +222,7 @@
                     </p>
                 </form> -->
                 <iframe
+                class="google-forms"
                     src="https://docs.google.com/forms/d/e/1FAIpQLSf8wKSJW-Ma9zKDESMqaDC1KIS_zGiFaYRa11j_M_hW7KGWQg/viewform?embedded=true"
                     width="640" height="921" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
