--- a/index.html
+++ b/index.html
@@ -221,10 +221,7 @@
                         <input type="submit" value="отправить">
                     </p>
                 </form> -->
-                <iframe
-                class="google-forms"
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSf8wKSJW-Ma9zKDESMqaDC1KIS_zGiFaYRa11j_M_hW7KGWQg/viewform?embedded=true"
-                    width="640" height="921" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/u/66d6ab8d73cee73d3c0b3b7a/?iframe=1" frameborder="0" name="ya-form-66d6ab8d73cee73d3c0b3b7a" width="650"></iframe>
             </div>
         </div>
         <div class="contacts" id="block5">
