--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="timing_flex1">
                         <h4 class="lastochka-font timing-txt">16:00</h4>
                         <img
-                            src="/./images/dance.png"
+                            src="images/dance.png"
                             alt="Dance"
                             width="70"
                             height="70"
@@ -161,7 +161,7 @@
                     <div class="timing_flex2">
                         <h4 class="lastochka-font timing-txt">16:30</h4>
                         <img
-                            src="/./images/rings_3405946.png"
+                            src="images/rings_3405946.png"
                             class="timing_img"
                         />
                         <div class="timing_flex_txt">
@@ -221,42 +221,42 @@
                                 <li>
                                     <img
                                         class="people-img"
-                                        src="/./images/dress code/woman/1.jpg"
+                                        src="images/dress code/woman/1.jpg"
                                         alt="Woman Image 1"
                                     />
                                 </li>
                                 <li>
                                     <img
                                         class="people-img"
-                                        src="/./images/dress code/woman/2.jpg"
+                                        src="images/dress code/woman/2.jpg"
                                         alt="Woman Image 2"
                                     />
                                 </li>
                                 <li>
                                     <img
                                         class="people-img"
-                                        src="/./images/dress code/woman/6.jpg"
+                                        src="images/dress code/woman/6.jpg"
                                         alt="Woman Image 3"
                                     />
                                 </li>
                                 <li>
                                     <img
                                         class="people-img"
-                                        src="/./images/dress code/woman/3.jpg"
+                                        src="./images/dress code/woman/3.jpg"
                                         alt="Woman Image 4"
                                     />
                                 </li>
                                 <li>
                                     <img
                                         class="people-img"
-                                        src="/./images/dress code/woman/4.jpg"
+                                        src="images/dress code/woman/4.jpg"
                                         alt="Woman Image 5"
                                     />
                                 </li>
                                 <li>
                                     <img
                                         class="people-img"
-                                        src="/./images/dress code/woman/5.jpg"
+                                        src="images/dress code/woman/5.jpg"
                                         alt="Woman Image 6"
                                     />
                                 </li>
