--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h2 class="lastochka-font logo-date">Июль 2024</h2>
                     <div class="calendar">
                         <img
-                            src="/./images/ring.svg"
+                            src="images/ring.svg"
                             alt="Calendar Heart"
                             class="img1_calendar"
                         />
